vendor/cargo/auto_impl-0.5.0/tests/compile-fail/attr_on_fn.stderr
error: couldn't parse trait item

  = note: expected `trait`
  = note: the #[auto_impl] attribute can only be applied to traits!

 --> $DIR/attr_on_fn.rs:4:1
  |
4 | #[auto_impl(&, &mut)]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `auto_impl` (in Nightly builds, run with -Z macro-backtrace for more info)
